# HsTecan

./: AtomFeedCode.html  Converter.hs  ExpPage.hamlet  ExpsTable.hamlet  Fitting.hs  GnuPlotUtils.hs  GraphPage.hamlet  Header.whamlet  HighChartsGraph.julius  HighChartsJson.hs  PlotExpData.hs  RoboAlg.hs  RoboCSV.hs  RoboDB.hs  RoboLib.hs  RoboRoutes  RoboSite.conf  RoboSite.hs  RoboSiteMain.cassius  RoboSiteMain.hamlet  RoboSiteMain.julius  RoboStat.hs  RoboUtils.hs  Testing.hs  UpdateLabelForm.whamlet  UpdatePlateForm.whamlet  UploadPlateCsv.whamlet  plotting.hs  robolib.cabal
Biolab/: Constants.hs  ExpData.hs  Measurement.hs  Patches.hs  Processing.hs  Smoothing.hs  Types.hs
Biolab/ExpData/: AutoFluorescense.hs  Processing.hs  Utils.hs
Biolab/Interfaces/: Csv.hs  Matlab.hs  MySql.hs
Biolab/Utils/: LinearRegression.hs  Vector.hs
RoboSiteCore/: Graph.hs
