Name:		robolib
Version:	0.0
Description:	Basic manipulation utilities for processing data from Tecan Robot
License:	GPL
Author:		Uri Barenholz
Build-Type:	Simple
Cabal-Version:	>=1.2

Library
    Build-Depends:    base >= 3 && < 5, gnuplot >=0.4.2, parsec >= 3.1,
                      utility-ht >= 0.0.8, statistics >= 0.8, datetime >= 0.2,
                      vector >= 0.9, containers >= 0.3,
                      statistics-linreg >= 0.2.1 && < 0.3, ConfigFile >= 1.1.1,
                      transformers >= 0.2.2.0, mtl >= 2.0.1
    Exposed-modules:  Biolab.ExpData.Processing, GnuPlotUtils, Biolab.Utils.Vector, Biolab.Processing, Biolab.Constants, Biolab.Types, Biolab.Interfaces.MySql, Biolab.Interfaces.Csv

Executable  PlotExpData
    Main-is:	      PlotExpData.hs
    Build-Depends:    base >= 3 && < 5, gnuplot >=0.4.2, parsec >= 3.1,
                      utility-ht >= 0.0.8, statistics >= 0.8, datetime >= 0.2,
                      vector >= 0.9, containers >= 0.3

Executable  plotting
    Main-is:	      plotting.hs
    Build-Depends:    base >= 3 && < 5, gnuplot >=0.4.2, parsec >= 3.1,
                      utility-ht >= 0.0.8, statistics >= 0.8, datetime >= 0.2,
                      vector >= 0.9, containers >= 0.3, either-unwrap >= 1.0,
                      utf8-string >= 0.3.6, bytestring >= 0.9, csv >= 0.1.2,
                      text >= 0.11, HDBC >= 2.2, HDBC-mysql >= 0.6,
                      HaskellForMaths >= 0.3, filepath >= 1.2, plot >= 0.1.3,
                      plot-gtk >= 0.1.0.6, hmatrix >= 0.12,
                      pango >= 0.12, cairo >= 0.12, gio >= 0.12, glib >= 0.12, gtk >= 0.12
Executable  RoboSite
    Main-is:	      RoboSite.hs
    Build-Depends:    base >= 3 && < 5, gnuplot >=0.4.2, parsec >= 3.1,
                      utility-ht >= 0.0.8, statistics >= 0.8, datetime >= 0.2,
                      vector >= 0.9, containers >= 0.3, either-unwrap >= 1.0,
                      json >= 0.4.4, utf8-string >= 0.3.6, bytestring >= 0.9, csv >= 0.1.2,
                      text >= 0.11, HDBC >= 2.2, HDBC-mysql >= 0.6,
                      HaskellForMaths >= 0.3, filepath >= 1.2, yesod-form >= 0.3.4,
                      yesod >= 1.0, shakespeare-js >= 0.10, hamlet >= 0.10,
                      shakespeare-css >= 0.10, yesod-auth >= 0.7.8, blaze-markup >= 0.5
